Solve line 30 problem about image align

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ h3 {
 }
 
 img {
-    vertical-align: top;
     width: 600px;
     margin: 0 auto;
     display: block;
